--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 
 # Scripts to be run such as tests
 before_script:
-  - echo "no tests"
+  - echo "no tests!"
 
 script:
   # Build & Tag
