--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ after_success:
   # Push
   # Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push  eyobs/udagram-reverse-proxy:v1
+  - docker push  eyobs/udagram-reverseproxy:v1
   - docker push  eyobs/udagram-frontend:v1
-  - docker push  eyobs/udagram-users-microservice:v1
-  - docker push  eyobs/udagram-feed-microservice:v1
+  - docker push  eyobs/udagram-api-user:v1
+  - docker push  eyobs/udagram-api-feed:v1
